# arithmetic-encoding

./: README.md  arithmetic-encoding.cabal
cbits/: Makefile  bin.c  bitio.c  bitio.h  decode.c  decode.h  encode.c  encode.h  log.c  log.h  model.c  model.h  test_bitio.c
src/: BitIO.hs  BitIOStateT.hs  Decoder.hs  Encoder.hs  Main.hs
src/Model/: Adaptive.hs  IO.hs  Static.hs  Types.hs
