name:                arithmetic-encoding
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robbassi/arithmetic-encoding
license:             BSD3
license-file:        LICENSE
author:              Rob Bassi
copyright:           2020 Rob Bassi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable arith
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Encoder
                       Decoder
                       BitIO
                       Model.Types
                       Model.Adaptive
                       Model.Static
                       Model.IO
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , bytestring
                     , binary
                     , transformers
                     , QuickCheck
